--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,12 @@
 			<artifactId>operadriver</artifactId>
 			<version>1.5</version>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 	<build>
 		<resources>
